# dirwatch

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
dirwatch/: __init__.py  __main__.py  actions.py  autostart.py  config.py  db.py  desktop.py  engine.py  models.py  paths.py  util.py  watcher.py
dirwatch/ui/: __init__.py  app.py  archive_prompt.py  digest.py  icon.py  popup.py  settings_window.py  style.py
packaging/: build-appimage.sh  dirwatch-entry.py  dirwatch.desktop  make_icon.py
scripts/: smoke_engine.py  smoke_ui.py
